@@ -1,5 +1,6 @@
 - RESPEC required for Circle of the Night druid older than v52
 - RESPEC required for fighter with Weapon Specialization older than v61
 - added Tactician Adept feat and Web spell
+- improved Archery support for darts and lightning launcher
 - improved Path of the Elements' elemental burst SFX
 - improved Resonating Strike to allow crit on first target
